Scout Java 21 compatibility risks